versions/0.8.1/_sources/refs/_aws-cdk_aws-iot.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"y4jKLpsXJqVdGeYtqhhhnsFM542m/9Iy0urFsHKo0vE="}

@aws-cdk/aws-iot
================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/iot/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:iot:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="iot" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>iot</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:iot:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='iot', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-iot/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-iot@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-iot": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-iot@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-iot/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-iot@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-iot": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-iot@0.8.1



.. mdinclude:: ./__aws-cdk_aws-iot.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-iot

CertificateArn
^^^^^^^^^^^^^^

.. py:class:: CertificateArn([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.CertificateArn;

      .. code-tab:: javascript

         const { CertificateArn } = require('@aws-cdk/aws-iot');

      .. code-tab:: typescript

         import { CertificateArn } from '@aws-cdk/aws-iot';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

PolicyArn
^^^^^^^^^

.. py:class:: PolicyArn([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.PolicyArn;

      .. code-tab:: javascript

         const { PolicyArn } = require('@aws-cdk/aws-iot');

      .. code-tab:: typescript

         import { PolicyArn } from '@aws-cdk/aws-iot';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

TopicRuleArn
^^^^^^^^^^^^

.. py:class:: TopicRuleArn([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.TopicRuleArn;

      .. code-tab:: javascript

         const { TopicRuleArn } = require('@aws-cdk/aws-iot');

      .. code-tab:: typescript

         import { TopicRuleArn } from '@aws-cdk/aws-iot';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-iot.cloudformation

CertificateResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: CertificateResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.cloudformation.CertificateResource;

      .. code-tab:: javascript

         const { cloudformation.CertificateResource } = require('@aws-cdk/aws-iot');

      .. code-tab:: typescript

         import { cloudformation.CertificateResource } from '@aws-cdk/aws-iot';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``CertificateResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``CertificateResource``
   :type properties: :py:class:`~@aws-cdk/aws-iot.cloudformation.CertificateResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: certificateArn

      :type: :py:class:`~@aws-cdk/aws-iot.CertificateArn` *(readonly)*


CertificateResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CertificateResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.cloudformation.CertificateResourceProps;

      .. code-tab:: javascript

         // cloudformation.CertificateResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.CertificateResourceProps } from '@aws-cdk/aws-iot';





   .. py:attribute:: certificateSigningRequest

      ``AWS::IoT::Certificate.CertificateSigningRequest``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iot-certificate.html#cfn-iot-certificate-certificatesigningrequest


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: status

      ``AWS::IoT::Certificate.Status``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iot-certificate.html#cfn-iot-certificate-status


      :type: string or :py:class:`@aws-cdk/cdk.Token`


PolicyPrincipalAttachmentResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PolicyPrincipalAttachmentResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.cloudformation.PolicyPrincipalAttachmentResource;

      .. code-tab:: javascript

         const { cloudformation.PolicyPrincipalAttachmentResource } = require('@aws-cdk/aws-iot');

      .. code-tab:: typescript

         import { cloudformation.PolicyPrincipalAttachmentResource } from '@aws-cdk/aws-iot';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PolicyPrincipalAttachmentResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PolicyPrincipalAttachmentResource``
   :type properties: :py:class:`~@aws-cdk/aws-iot.cloudformation.PolicyPrincipalAttachmentResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


PolicyPrincipalAttachmentResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PolicyPrincipalAttachmentResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.cloudformation.PolicyPrincipalAttachmentResourceProps;

      .. code-tab:: javascript

         // cloudformation.PolicyPrincipalAttachmentResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PolicyPrincipalAttachmentResourceProps } from '@aws-cdk/aws-iot';





   .. py:attribute:: policyName

      ``AWS::IoT::PolicyPrincipalAttachment.PolicyName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iot-policyprincipalattachment.html#cfn-iot-policyprincipalattachment-policyname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: principal

      ``AWS::IoT::PolicyPrincipalAttachment.Principal``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iot-policyprincipalattachment.html#cfn-iot-policyprincipalattachment-principal


      :type: string or :py:class:`@aws-cdk/cdk.Token`


PolicyResource
~~~~~~~~~~~~~~

.. py:class:: PolicyResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.cloudformation.PolicyResource;

      .. code-tab:: javascript

         const { cloudformation.PolicyResource } = require('@aws-cdk/aws-iot');

      .. code-tab:: typescript

         import { cloudformation.PolicyResource } from '@aws-cdk/aws-iot';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PolicyResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PolicyResource``
   :type properties: :py:class:`~@aws-cdk/aws-iot.cloudformation.PolicyResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: policyArn

      :type: :py:class:`~@aws-cdk/aws-iot.PolicyArn` *(readonly)*


PolicyResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PolicyResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.cloudformation.PolicyResourceProps;

      .. code-tab:: javascript

         // cloudformation.PolicyResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PolicyResourceProps } from '@aws-cdk/aws-iot';





   .. py:attribute:: policyDocument

      ``AWS::IoT::Policy.PolicyDocument``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iot-policy.html#cfn-iot-policy-policydocument


      :type: json or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: policyName

      ``AWS::IoT::Policy.PolicyName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iot-policy.html#cfn-iot-policy-policyname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


ThingPrincipalAttachmentResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ThingPrincipalAttachmentResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.cloudformation.ThingPrincipalAttachmentResource;

      .. code-tab:: javascript

         const { cloudformation.ThingPrincipalAttachmentResource } = require('@aws-cdk/aws-iot');

      .. code-tab:: typescript

         import { cloudformation.ThingPrincipalAttachmentResource } from '@aws-cdk/aws-iot';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ThingPrincipalAttachmentResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ThingPrincipalAttachmentResource``
   :type properties: :py:class:`~@aws-cdk/aws-iot.cloudformation.ThingPrincipalAttachmentResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


ThingPrincipalAttachmentResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ThingPrincipalAttachmentResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.cloudformation.ThingPrincipalAttachmentResourceProps;

      .. code-tab:: javascript

         // cloudformation.ThingPrincipalAttachmentResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ThingPrincipalAttachmentResourceProps } from '@aws-cdk/aws-iot';





   .. py:attribute:: principal

      ``AWS::IoT::ThingPrincipalAttachment.Principal``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iot-thingprincipalattachment.html#cfn-iot-thingprincipalattachment-principal


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: thingName

      ``AWS::IoT::ThingPrincipalAttachment.ThingName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iot-thingprincipalattachment.html#cfn-iot-thingprincipalattachment-thingname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


ThingResource
~~~~~~~~~~~~~

.. py:class:: ThingResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.cloudformation.ThingResource;

      .. code-tab:: javascript

         const { cloudformation.ThingResource } = require('@aws-cdk/aws-iot');

      .. code-tab:: typescript

         import { cloudformation.ThingResource } from '@aws-cdk/aws-iot';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ThingResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ThingResource``
   :type properties: :py:class:`~@aws-cdk/aws-iot.cloudformation.ThingResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: AttributePayloadProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.cloudformation.ThingResource.AttributePayloadProperty;

         .. code-tab:: javascript

            // cloudformation.ThingResource.AttributePayloadProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ThingResource.AttributePayloadProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: attributes

         ``ThingResource.AttributePayloadProperty.Attributes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-thing-attributepayload.html#cfn-iot-thing-attributepayload-attributes


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined



ThingResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ThingResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.cloudformation.ThingResourceProps;

      .. code-tab:: javascript

         // cloudformation.ThingResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ThingResourceProps } from '@aws-cdk/aws-iot';





   .. py:attribute:: attributePayload

      ``AWS::IoT::Thing.AttributePayload``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iot-thing.html#cfn-iot-thing-attributepayload


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-iot.cloudformation.ThingResource.AttributePayloadProperty` or undefined


   .. py:attribute:: thingName

      ``AWS::IoT::Thing.ThingName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iot-thing.html#cfn-iot-thing-thingname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


TopicRuleResource
~~~~~~~~~~~~~~~~~

.. py:class:: TopicRuleResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResource;

      .. code-tab:: javascript

         const { cloudformation.TopicRuleResource } = require('@aws-cdk/aws-iot');

      .. code-tab:: typescript

         import { cloudformation.TopicRuleResource } from '@aws-cdk/aws-iot';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TopicRuleResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TopicRuleResource``
   :type properties: :py:class:`~@aws-cdk/aws-iot.cloudformation.TopicRuleResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: topicRuleArn

      :type: :py:class:`~@aws-cdk/aws-iot.TopicRuleArn` *(readonly)*

   .. py:class:: ActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResource.ActionProperty;

         .. code-tab:: javascript

            // cloudformation.TopicRuleResource.ActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TopicRuleResource.ActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: cloudwatchAlarm

         ``TopicRuleResource.ActionProperty.CloudwatchAlarm``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-action.html#cfn-iot-topicrule-action-cloudwatchalarm


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-iot.cloudformation.TopicRuleResource.CloudwatchAlarmActionProperty` or undefined


      .. py:attribute:: cloudwatchMetric

         ``TopicRuleResource.ActionProperty.CloudwatchMetric``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-action.html#cfn-iot-topicrule-action-cloudwatchmetric


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-iot.cloudformation.TopicRuleResource.CloudwatchMetricActionProperty` or undefined


      .. py:attribute:: dynamoDb

         ``TopicRuleResource.ActionProperty.DynamoDB``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-action.html#cfn-iot-topicrule-action-dynamodb


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-iot.cloudformation.TopicRuleResource.DynamoDBActionProperty` or undefined


      .. py:attribute:: dynamoDBv2

         ``TopicRuleResource.ActionProperty.DynamoDBv2``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-action.html#cfn-iot-topicrule-action-dynamodbv2


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-iot.cloudformation.TopicRuleResource.DynamoDBv2ActionProperty` or undefined


      .. py:attribute:: elasticsearch

         ``TopicRuleResource.ActionProperty.Elasticsearch``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-action.html#cfn-iot-topicrule-action-elasticsearch


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-iot.cloudformation.TopicRuleResource.ElasticsearchActionProperty` or undefined


      .. py:attribute:: firehose

         ``TopicRuleResource.ActionProperty.Firehose``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-action.html#cfn-iot-topicrule-action-firehose


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-iot.cloudformation.TopicRuleResource.FirehoseActionProperty` or undefined


      .. py:attribute:: kinesis

         ``TopicRuleResource.ActionProperty.Kinesis``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-action.html#cfn-iot-topicrule-action-kinesis


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-iot.cloudformation.TopicRuleResource.KinesisActionProperty` or undefined


      .. py:attribute:: lambda

         ``TopicRuleResource.ActionProperty.Lambda``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-action.html#cfn-iot-topicrule-action-lambda


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-iot.cloudformation.TopicRuleResource.LambdaActionProperty` or undefined


      .. py:attribute:: republish

         ``TopicRuleResource.ActionProperty.Republish``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-action.html#cfn-iot-topicrule-action-republish


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-iot.cloudformation.TopicRuleResource.RepublishActionProperty` or undefined


      .. py:attribute:: s3

         ``TopicRuleResource.ActionProperty.S3``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-action.html#cfn-iot-topicrule-action-s3


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-iot.cloudformation.TopicRuleResource.S3ActionProperty` or undefined


      .. py:attribute:: sns

         ``TopicRuleResource.ActionProperty.Sns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-action.html#cfn-iot-topicrule-action-sns


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-iot.cloudformation.TopicRuleResource.SnsActionProperty` or undefined


      .. py:attribute:: sqs

         ``TopicRuleResource.ActionProperty.Sqs``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-action.html#cfn-iot-topicrule-action-sqs


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-iot.cloudformation.TopicRuleResource.SqsActionProperty` or undefined


   .. py:class:: CloudwatchAlarmActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResource.CloudwatchAlarmActionProperty;

         .. code-tab:: javascript

            // cloudformation.TopicRuleResource.CloudwatchAlarmActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TopicRuleResource.CloudwatchAlarmActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: alarmName

         ``TopicRuleResource.CloudwatchAlarmActionProperty.AlarmName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-cloudwatchalarmaction.html#cfn-iot-topicrule-cloudwatchalarmaction-alarmname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: roleArn

         ``TopicRuleResource.CloudwatchAlarmActionProperty.RoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-cloudwatchalarmaction.html#cfn-iot-topicrule-cloudwatchalarmaction-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: stateReason

         ``TopicRuleResource.CloudwatchAlarmActionProperty.StateReason``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-cloudwatchalarmaction.html#cfn-iot-topicrule-cloudwatchalarmaction-statereason


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: stateValue

         ``TopicRuleResource.CloudwatchAlarmActionProperty.StateValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-cloudwatchalarmaction.html#cfn-iot-topicrule-cloudwatchalarmaction-statevalue


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: CloudwatchMetricActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResource.CloudwatchMetricActionProperty;

         .. code-tab:: javascript

            // cloudformation.TopicRuleResource.CloudwatchMetricActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TopicRuleResource.CloudwatchMetricActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: metricName

         ``TopicRuleResource.CloudwatchMetricActionProperty.MetricName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-cloudwatchmetricaction.html#cfn-iot-topicrule-cloudwatchmetricaction-metricname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: metricNamespace

         ``TopicRuleResource.CloudwatchMetricActionProperty.MetricNamespace``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-cloudwatchmetricaction.html#cfn-iot-topicrule-cloudwatchmetricaction-metricnamespace


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: metricTimestamp

         ``TopicRuleResource.CloudwatchMetricActionProperty.MetricTimestamp``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-cloudwatchmetricaction.html#cfn-iot-topicrule-cloudwatchmetricaction-metrictimestamp


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: metricUnit

         ``TopicRuleResource.CloudwatchMetricActionProperty.MetricUnit``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-cloudwatchmetricaction.html#cfn-iot-topicrule-cloudwatchmetricaction-metricunit


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: metricValue

         ``TopicRuleResource.CloudwatchMetricActionProperty.MetricValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-cloudwatchmetricaction.html#cfn-iot-topicrule-cloudwatchmetricaction-metricvalue


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: roleArn

         ``TopicRuleResource.CloudwatchMetricActionProperty.RoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-cloudwatchmetricaction.html#cfn-iot-topicrule-cloudwatchmetricaction-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: DynamoDBActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResource.DynamoDBActionProperty;

         .. code-tab:: javascript

            // cloudformation.TopicRuleResource.DynamoDBActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TopicRuleResource.DynamoDBActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: hashKeyField

         ``TopicRuleResource.DynamoDBActionProperty.HashKeyField``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-dynamodbaction.html#cfn-iot-topicrule-dynamodbaction-hashkeyfield


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: hashKeyType

         ``TopicRuleResource.DynamoDBActionProperty.HashKeyType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-dynamodbaction.html#cfn-iot-topicrule-dynamodbaction-hashkeytype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: hashKeyValue

         ``TopicRuleResource.DynamoDBActionProperty.HashKeyValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-dynamodbaction.html#cfn-iot-topicrule-dynamodbaction-hashkeyvalue


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: payloadField

         ``TopicRuleResource.DynamoDBActionProperty.PayloadField``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-dynamodbaction.html#cfn-iot-topicrule-dynamodbaction-payloadfield


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: rangeKeyField

         ``TopicRuleResource.DynamoDBActionProperty.RangeKeyField``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-dynamodbaction.html#cfn-iot-topicrule-dynamodbaction-rangekeyfield


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: rangeKeyType

         ``TopicRuleResource.DynamoDBActionProperty.RangeKeyType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-dynamodbaction.html#cfn-iot-topicrule-dynamodbaction-rangekeytype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: rangeKeyValue

         ``TopicRuleResource.DynamoDBActionProperty.RangeKeyValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-dynamodbaction.html#cfn-iot-topicrule-dynamodbaction-rangekeyvalue


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: roleArn

         ``TopicRuleResource.DynamoDBActionProperty.RoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-dynamodbaction.html#cfn-iot-topicrule-dynamodbaction-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: tableName

         ``TopicRuleResource.DynamoDBActionProperty.TableName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-dynamodbaction.html#cfn-iot-topicrule-dynamodbaction-tablename


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: DynamoDBv2ActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResource.DynamoDBv2ActionProperty;

         .. code-tab:: javascript

            // cloudformation.TopicRuleResource.DynamoDBv2ActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TopicRuleResource.DynamoDBv2ActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: putItem

         ``TopicRuleResource.DynamoDBv2ActionProperty.PutItem``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-dynamodbv2action.html#cfn-iot-topicrule-dynamodbv2action-putitem


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-iot.cloudformation.TopicRuleResource.PutItemInputProperty` or undefined


      .. py:attribute:: roleArn

         ``TopicRuleResource.DynamoDBv2ActionProperty.RoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-dynamodbv2action.html#cfn-iot-topicrule-dynamodbv2action-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ElasticsearchActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResource.ElasticsearchActionProperty;

         .. code-tab:: javascript

            // cloudformation.TopicRuleResource.ElasticsearchActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TopicRuleResource.ElasticsearchActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: endpoint

         ``TopicRuleResource.ElasticsearchActionProperty.Endpoint``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-elasticsearchaction.html#cfn-iot-topicrule-elasticsearchaction-endpoint


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: id

         ``TopicRuleResource.ElasticsearchActionProperty.Id``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-elasticsearchaction.html#cfn-iot-topicrule-elasticsearchaction-id


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: index

         ``TopicRuleResource.ElasticsearchActionProperty.Index``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-elasticsearchaction.html#cfn-iot-topicrule-elasticsearchaction-index


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: roleArn

         ``TopicRuleResource.ElasticsearchActionProperty.RoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-elasticsearchaction.html#cfn-iot-topicrule-elasticsearchaction-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: type

         ``TopicRuleResource.ElasticsearchActionProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-elasticsearchaction.html#cfn-iot-topicrule-elasticsearchaction-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: FirehoseActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResource.FirehoseActionProperty;

         .. code-tab:: javascript

            // cloudformation.TopicRuleResource.FirehoseActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TopicRuleResource.FirehoseActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: deliveryStreamName

         ``TopicRuleResource.FirehoseActionProperty.DeliveryStreamName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-firehoseaction.html#cfn-iot-topicrule-firehoseaction-deliverystreamname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: roleArn

         ``TopicRuleResource.FirehoseActionProperty.RoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-firehoseaction.html#cfn-iot-topicrule-firehoseaction-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: separator

         ``TopicRuleResource.FirehoseActionProperty.Separator``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-firehoseaction.html#cfn-iot-topicrule-firehoseaction-separator


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: KinesisActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResource.KinesisActionProperty;

         .. code-tab:: javascript

            // cloudformation.TopicRuleResource.KinesisActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TopicRuleResource.KinesisActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: partitionKey

         ``TopicRuleResource.KinesisActionProperty.PartitionKey``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-kinesisaction.html#cfn-iot-topicrule-kinesisaction-partitionkey


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: roleArn

         ``TopicRuleResource.KinesisActionProperty.RoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-kinesisaction.html#cfn-iot-topicrule-kinesisaction-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: streamName

         ``TopicRuleResource.KinesisActionProperty.StreamName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-kinesisaction.html#cfn-iot-topicrule-kinesisaction-streamname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: LambdaActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResource.LambdaActionProperty;

         .. code-tab:: javascript

            // cloudformation.TopicRuleResource.LambdaActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TopicRuleResource.LambdaActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: functionArn

         ``TopicRuleResource.LambdaActionProperty.FunctionArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-lambdaaction.html#cfn-iot-topicrule-lambdaaction-functionarn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: PutItemInputProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResource.PutItemInputProperty;

         .. code-tab:: javascript

            // cloudformation.TopicRuleResource.PutItemInputProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TopicRuleResource.PutItemInputProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: tableName

         ``TopicRuleResource.PutItemInputProperty.TableName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-putiteminput.html#cfn-iot-topicrule-putiteminput-tablename


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: RepublishActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResource.RepublishActionProperty;

         .. code-tab:: javascript

            // cloudformation.TopicRuleResource.RepublishActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TopicRuleResource.RepublishActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: roleArn

         ``TopicRuleResource.RepublishActionProperty.RoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-republishaction.html#cfn-iot-topicrule-republishaction-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: topic

         ``TopicRuleResource.RepublishActionProperty.Topic``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-republishaction.html#cfn-iot-topicrule-republishaction-topic


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: S3ActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResource.S3ActionProperty;

         .. code-tab:: javascript

            // cloudformation.TopicRuleResource.S3ActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TopicRuleResource.S3ActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: bucketName

         ``TopicRuleResource.S3ActionProperty.BucketName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-s3action.html#cfn-iot-topicrule-s3action-bucketname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: key

         ``TopicRuleResource.S3ActionProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-s3action.html#cfn-iot-topicrule-s3action-key


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: roleArn

         ``TopicRuleResource.S3ActionProperty.RoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-s3action.html#cfn-iot-topicrule-s3action-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SnsActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResource.SnsActionProperty;

         .. code-tab:: javascript

            // cloudformation.TopicRuleResource.SnsActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TopicRuleResource.SnsActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: messageFormat

         ``TopicRuleResource.SnsActionProperty.MessageFormat``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-snsaction.html#cfn-iot-topicrule-snsaction-messageformat


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: roleArn

         ``TopicRuleResource.SnsActionProperty.RoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-snsaction.html#cfn-iot-topicrule-snsaction-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: targetArn

         ``TopicRuleResource.SnsActionProperty.TargetArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-snsaction.html#cfn-iot-topicrule-snsaction-targetarn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SqsActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResource.SqsActionProperty;

         .. code-tab:: javascript

            // cloudformation.TopicRuleResource.SqsActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TopicRuleResource.SqsActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: queueUrl

         ``TopicRuleResource.SqsActionProperty.QueueUrl``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-sqsaction.html#cfn-iot-topicrule-sqsaction-queueurl


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: roleArn

         ``TopicRuleResource.SqsActionProperty.RoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-sqsaction.html#cfn-iot-topicrule-sqsaction-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: useBase64

         ``TopicRuleResource.SqsActionProperty.UseBase64``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-sqsaction.html#cfn-iot-topicrule-sqsaction-usebase64


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TopicRulePayloadProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResource.TopicRulePayloadProperty;

         .. code-tab:: javascript

            // cloudformation.TopicRuleResource.TopicRulePayloadProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TopicRuleResource.TopicRulePayloadProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: actions

         ``TopicRuleResource.TopicRulePayloadProperty.Actions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-topicrulepayload.html#cfn-iot-topicrule-topicrulepayload-actions


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-iot.cloudformation.TopicRuleResource.ActionProperty`


      .. py:attribute:: awsIotSqlVersion

         ``TopicRuleResource.TopicRulePayloadProperty.AwsIotSqlVersion``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-topicrulepayload.html#cfn-iot-topicrule-topicrulepayload-awsiotsqlversion


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: description

         ``TopicRuleResource.TopicRulePayloadProperty.Description``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-topicrulepayload.html#cfn-iot-topicrule-topicrulepayload-description


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: ruleDisabled

         ``TopicRuleResource.TopicRulePayloadProperty.RuleDisabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-topicrulepayload.html#cfn-iot-topicrule-topicrulepayload-ruledisabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: sql

         ``TopicRuleResource.TopicRulePayloadProperty.Sql``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-iot-topicrule-topicrulepayload.html#cfn-iot-topicrule-topicrulepayload-sql


         :type: string or :py:class:`@aws-cdk/cdk.Token`



TopicRuleResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TopicRuleResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.cloudformation.TopicRuleResourceProps;

      .. code-tab:: javascript

         // cloudformation.TopicRuleResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.TopicRuleResourceProps } from '@aws-cdk/aws-iot';





   .. py:attribute:: topicRulePayload

      ``AWS::IoT::TopicRule.TopicRulePayload``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iot-topicrule.html#cfn-iot-topicrule-topicrulepayload


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-iot.cloudformation.TopicRuleResource.TopicRulePayloadProperty`


   .. py:attribute:: ruleName

      ``AWS::IoT::TopicRule.RuleName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-iot-topicrule.html#cfn-iot-topicrule-rulename


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-iot

